--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "date-fns": "^4.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
