--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "date-fns": "^4.1.0",
+    "lodash.samplesize": "^4.2.0",
     "motion": "^11.16.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
