--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "date-fns": "^4.1.0",
+    "focus-trap-react": "^11.0.4",
     "framer-motion": "^11.16.4",
     "lodash.samplesize": "^4.2.0",
     "motion": "^11.16.0",
@@ -36,15 +37,17 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.6.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "esbuild": "^0.25.5",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^25.0.1",
-    "vite": "^6.0.5",
-    "vitest": "^2.1.8"
+    "vite": "^7.0.0",
+    "vite-node": "^3.2.4",
+    "vitest": "^3.2.4"
   }
 }
